[gd_scene load_steps=6 format=3 uid="uid://dxnxp1yvxv8el"]

[ext_resource type="StyleBox" uid="uid://b0hi56v010edd" path="res://UI/legendary.tres" id="1_dvw3y"]
[ext_resource type="Script" path="res://UI/CarteSkill.gd" id="1_jrl5u"]
[ext_resource type="Script" path="res://Skills/Skill.gd" id="2_xvf7g"]
[ext_resource type="Texture2D" uid="uid://8thi6x1g3j0a" path="res://Skills/placeholder.png" id="3_v5r5x"]

[sub_resource type="Resource" id="Resource_ylqli"]
script = ExtResource("2_xvf7g")
img = "res://Skills/placeholder.png"
name = "PlaceHolder Skill"
description = "Ã§a fait pew pew"
rarity = 0

[node name="CarteSkill" type="Panel"]
custom_minimum_size = Vector2(150, 250)
theme_override_styles/panel = ExtResource("1_dvw3y")
script = ExtResource("1_jrl5u")
skill = SubResource("Resource_ylqli")

[node name="OrgaVerticale" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -83.0
offset_right = 50.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2

[node name="NomSkill" type="Label" parent="OrgaVerticale"]
layout_mode = 2
text = "Skill 1"

[node name="RichTextLabel" type="RichTextLabel" parent="OrgaVerticale"]
layout_mode = 2
text = ",dslkgfjdklfllkdgndlfk"
fit_content = true

[node name="ImageSkill" type="TextureRect" parent="OrgaVerticale"]
clip_contents = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("3_v5r5x")
expand_mode = 2

[node name="Button" type="Button" parent="OrgaVerticale"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Choisir"

[connection signal="pressed" from="OrgaVerticale/Button" to="." method="_on_button_pressed"]
